Update index.html camera open

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -175,7 +175,7 @@
         <h3>OR</h3>
 
         <div>
-            <input type="file" id="image-upload" accept="image/*">
+            <input type="file" id="image-upload" accept="image/*" capture="environment">
             <button id="extract-btn" onclick="uploadImage()">Extract Medicine Name</button>
         </div>
     </div>
