--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,7 +65,7 @@
       processData: false,
       contentType: false,
       success: function (response) {
-        response = JSON.parse(response)
+        // response = JSON.parse(response)
         
         
         result.removeClass('d-none alert-info');
