--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
 </head>
 <body class="bg-light">
 
-<div class="container mt-5 py-4 col-md-6 col-11 shadow rounded-4">
+<div class="container mt-5 pt-4 pb-1 col-md-6 col-11 shadow rounded-4">
   <h3 class="text-center mb-4">Medicine Usage Finder</h3>
 
   <form id="medicineForm" enctype="multipart/form-data">
