ui styling (padding)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
       <input type="file" class="form-control" id="image" name="image" accept="image/*" capture="camera">
     </div>
 
-    <button type="submit" class="btn btn-primary">Search</button>
+    <button type="submit" class="btn btn-primary mb-2">Search</button>
   </form>
 
   <div id="result" class="d-none bg-light shadow rounded-4 mt-4 p-3 px-4">
