ui styling (padding)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 <body class="bg-light">
 
 <div class="container mt-5 pt-4 pb-1 col-md-6 col-11 shadow rounded-4">
-  <h3 class="text-center mb-4">Medicine Usage Finder</h3>
+  <h3 class="text-center mb-4 text-primary"><b>Medicine Usage Finder</b></h3>
 
   <form id="medicineForm" enctype="multipart/form-data">
     <div class="mb-3">
