--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,7 +95,7 @@
         </a>
         <a href="https://stackoverflow.com/users/19938225/mrithul-e" target="_blank" rel="noopener noreferrer"
           class="text-white me-3">
-          <i class="bi bi-stack-overflow"></i> Stack Overflow
+          <i class="bi bi-stack-overflow"></i> Stack&nbsp;Overflow
         </a>
         <a href="https://www.threads.net/@mrithull_" target="_blank" rel="noopener noreferrer" class="text-white">
           <i class="bi bi-threads"></i> Threads
