--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:description" content="Find what a medicine is used for with simple, trusted info.">
   <meta name="twitter:image" content="https://medicine-use-finder.vercel.app/static/preview.png">
 
+  <meta name="google-site-verification" content="0e9uX5y0d-bcWx-py3VtCDs67Js5wHBDaFqbqV8sJxA" />
 
   <meta name="description"
     content="Find out what any medicine is used for. Type or upload the medicine name and get simple, reliable info from trusted sources.">
