--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,7 +130,7 @@
 
   <footer class="text-white py-2 mt-auto">
     <div class="container text-center">
-      <div class="mb-2">Made with <i class="bi bi-heart-fill text-danger"></i> in India by <strong>Mrithul E</strong>
+      <div class="mb-2">Made with <i class="bi bi-heart-fill text-danger"></i> in India by <strong>Mrithul</strong>
       </div>
       <div class="mb-2">
         <a href="https://github.com/Mrithul-E" target="_blank" rel="noopener noreferrer" class="text-white me-3">
