--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
 
   <meta name="description"
     content="Find out what any medicine is used for. Type or upload the medicine name and get simple, reliable info from trusted sources.">
-  <meta name="keywords" content="medicine usage, medicine info, drug use, find medicine use, medical search">
+  <meta name="keywords" content="medicine usage, medicine info, drug use, find medicine use, medical search, medicine use, 1mg, drug info, medicine finder, health, healthcare">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
