site name update

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <title>Medicine Use Finder | Simple & Reliable Medicine Info</title>
 
   <meta property="og:title" content="Medicine Use Finder">
+  <meta property="og:site_name" content="Medicine Use Finder">
   <meta property="og:description" content="Find what a medicine is used for with simple, trusted info.">
   <meta property="og:url" content="https://medicine-use-finder.vercel.app/">
   <meta property="og:type" content="website">
