--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,13 +31,15 @@
 
   <meta name="description"
     content="Find out what any medicine is used for. Type or upload the medicine name and get simple, reliable info from trusted sources.">
-  <meta name="keywords" content="medicine usage, medicine info, drug use, find medicine use, medical search, medicine use, 1mg, drug info, medicine finder, health, healthcare">
+  <meta name="keywords"
+    content="medicine usage, medicine info, drug use, find medicine use, medical search, medicine use, 1mg, drug info, medicine finder, health, healthcare">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13/font/bootstrap-icons.min.css">
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
   <style>
     .highlight-box {
@@ -111,6 +113,16 @@
         <div class="mb-3">
           <label for="image" class="form-label">Upload Image</label>
           <input type="file" class="form-control" id="image" name="image" accept="image/*" capture="camera">
+        </div>
+
+        <div class="mb-3">
+          <select class="form-select form-select-sm" name="lang" aria-label=".form-select-sm example">
+            <option value="en" selected>Language</option>
+            <option value="hi">Hindi</option>
+            <option value="en">English</option>
+            <option value="ml">Malayalam</option>
+            <option value="ta">Tamil</option>
+          </select>
         </div>
 
         <button type="submit" class="btn btn-primary mb-2">Search</button>
