--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,7 @@
   <meta name="twitter:image" content="https://medicine-use-finder.vercel.app/static/preview.png">
 
   <meta name="google-site-verification" content="0e9uX5y0d-bcWx-py3VtCDs67Js5wHBDaFqbqV8sJxA" />
+  <meta name="google-adsense-account" content="ca-pub-3776618104096388">
 
   <meta name="description"
     content="Find out what any medicine is used for. Type or upload the medicine name and get simple, reliable info from trusted sources.">
@@ -124,6 +125,8 @@
             <option value="ta">Tamil</option>
           </select>
         </div>
+
+        <div></div>
 
         <button type="submit" class="btn btn-primary mb-2">Search</button>
       </form>
