connect googleAdsense js

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,6 +96,8 @@
   "operatingSystem": "All"
 }
 </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3776618104096388"
+    crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-light">
