--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,8 +36,15 @@
     content="medicine usage, medicine info, drug use, find medicine use, medical search, medicine use, 1mg, drug info, medicine finder, health, healthcare">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13/font/bootstrap-icons.min.css">
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
@@ -137,16 +144,130 @@
 
       </div>
     </div>
-    <div class="text-muted small mb-3 mx-3  text-center">
-      <small>
-        This tool helps you understand what any medicine is used for. Type or upload a medicine name to get simple usage
-        info powered by Google search, sourced from sites like Tata 1mg and Netmeds.
-      </small>
+    <div class="row">
+      <div class="col-md-7 mx-auto">
+        <div class="text-muted small m-4 mb-3 text-center">
+          <small>
+            This tool helps you understand what any medicine is used for. Type or upload a medicine name to get simple
+            usage
+            info powered by Google search, sourced from sites like Tata 1mg and Netmeds.
+          </small>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-7 mx-auto">
+          <div class="accordion d-grid gap-1" id="accordionFAQ">
+            <h3 class="my-2 mt-4">FAQ</h3>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faqOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#faqCollapseOne" aria-expanded="true" aria-controls="faqCollapseOne">
+                  Is Medicine Use Finder a replacement for a doctor?
+                </button>
+              </h2>
+              <div id="faqCollapseOne" class="accordion-collapse collapse" aria-labelledby="faqOne"
+                data-bs-parent="#accordionFAQ">
+                <div class="accordion-body">
+                  No. This website only provides general educational information. It does not replace professional
+                  medical consultation. Always seek advice from a qualified doctor.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faqTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#faqCollapseTwo" aria-expanded="false" aria-controls="faqCollapseTwo">
+                  Can I take medicines based on this website?
+                </button>
+              </h2>
+              <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqTwo"
+                data-bs-parent="#accordionFAQ">
+                <div class="accordion-body">
+                  No. You should never self-medicate without proper medical guidance. This tool is for awareness and
+                  learning purposes only.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faqThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#faqCollapseThree" aria-expanded="false" aria-controls="faqCollapseThree">
+                  Is the information on this website always accurate?
+                </button>
+              </h2>
+              <div id="faqCollapseThree" class="accordion-collapse collapse" aria-labelledby="faqThree"
+                data-bs-parent="#accordionFAQ">
+                <div class="accordion-body">
+                  We try to provide correct and up-to-date information, but this website cannot guarantee complete
+                  accuracy. Always confirm with a healthcare professional.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faqFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#faqCollapseFour" aria-expanded="false" aria-controls="faqCollapseFour">
+                  Does this website collect personal data?
+                </button>
+              </h2>
+              <div id="faqCollapseFour" class="accordion-collapse collapse" aria-labelledby="faqFour"
+                data-bs-parent="#accordionFAQ">
+                <div class="accordion-body">
+                  We do not collect personal information. Third-party services like Google AdSense may use cookies to
+                  show relevant advertisements.
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="accordion d-grid gap-1" id="accordionInfo">
+            <h3 class="my-2 mt-4">Disclaimer</h3>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="infoTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#infoCollapseTwo" aria-expanded="false" aria-controls="infoCollapseTwo">
+                  Medical Disclaimer
+                </button>
+              </h2>
+              <div id="infoCollapseTwo" class="accordion-collapse collapse" aria-labelledby="infoTwo"
+                data-bs-parent="#accordionInfo">
+                <div class="accordion-body">
+                  The information on this website is for general informational purposes only and does not replace
+                  professional medical advice.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="infoOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#infoCollapseOne" aria-expanded="true" aria-controls="infoCollapseOne">
+                  About This Website
+                </button>
+              </h2>
+              <div id="infoCollapseOne" class="accordion-collapse collapse" aria-labelledby="infoOne"
+                data-bs-parent="#accordionInfo">
+                <div class="accordion-body">
+                  This website is designed to provide general information about the common uses of medicines. It is
+                  intended for educational purposes only.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
 
-  <footer class="text-white py-2 mt-auto">
+  <footer class="text-white py-2 mt-3">
     <div class="container text-center">
       <div class="mb-2">Made with <i class="bi bi-heart-fill text-danger"></i> in India by <strong>Mrithul</strong>
       </div>
@@ -271,6 +392,7 @@
       });
     });
   </script>
+
 </body>
 
 </html>
