--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,6 +46,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13/font/bootstrap-icons.min.css">
+  <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/browser-image-compression@2.0.2/dist/browser-image-compression.js"></script>
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
@@ -148,7 +150,8 @@
       <div class="col-md-7 mx-auto">
         <div class="text-muted small m-4 mb-3 text-center">
           <small>
-            This tool helps you understand what any medicine is used for. Type or upload a medicine name to get simple
+            This tool helps you understand what any medicine is used for. Type or upload a medicine name to get
+            simple
             usage
             info powered by Google search, sourced from sites like Tata 1mg and Netmeds.
           </small>
@@ -187,7 +190,8 @@
               <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqTwo"
                 data-bs-parent="#accordionFAQ">
                 <div class="accordion-body">
-                  No. You should never self-medicate without proper medical guidance. This tool is for awareness and
+                  No. You should never self-medicate without proper medical guidance. This tool is for awareness
+                  and
                   learning purposes only.
                 </div>
               </div>
@@ -219,7 +223,8 @@
               <div id="faqCollapseFour" class="accordion-collapse collapse" aria-labelledby="faqFour"
                 data-bs-parent="#accordionFAQ">
                 <div class="accordion-body">
-                  We do not collect personal information. Third-party services like Google AdSense may use cookies to
+                  We do not collect personal information. Third-party services like Google AdSense may use cookies
+                  to
                   show relevant advertisements.
                 </div>
               </div>
@@ -255,7 +260,8 @@
               <div id="infoCollapseOne" class="accordion-collapse collapse" aria-labelledby="infoOne"
                 data-bs-parent="#accordionInfo">
                 <div class="accordion-body">
-                  This website is designed to provide general information about the common uses of medicines. It is
+                  This website is designed to provide general information about the common uses of medicines. It
+                  is
                   intended for educational purposes only.
                 </div>
               </div>
@@ -269,7 +275,8 @@
 
   <footer class="text-white py-2 mt-3">
     <div class="container text-center">
-      <div class="mb-2">Made with <i class="bi bi-heart-fill text-danger"></i> in India by <strong>Mrithul</strong>
+      <div class="mb-2">Made with <i class="bi bi-heart-fill text-danger"></i> in India by
+        <strong>Mrithul</strong>
       </div>
       <div class="mb-2">
         <a href="https://github.com/Mrithul-E" target="_blank" rel="noopener noreferrer" class="text-white me-3">
@@ -305,14 +312,37 @@
       $("#image").val("")
     })
 
-    $('#medicineForm').on('submit', function (e) {
+    $('#medicineForm').on('submit', async function (e) {
       e.preventDefault();
 
       const formData = new FormData(this);
       const result = $('#result');
+      const imageFile = document.querySelector('#image').files[0];
 
 
       result.removeClass('d-none alert-info alert-danger').addClass('alert alert-info').text('Loading...');
+
+      if (imageFile) {
+        result.text('Compressing image...');
+        const options = {
+          maxSizeMB: 1,
+          maxWidthOrHeight: 1920,
+          useWebWorker: true
+        }
+
+        try {
+          const compressedFile = await imageCompression(imageFile, options);
+          formData.set('image', compressedFile, compressedFile.name);
+          console.log(`originalFile size ${imageFile.size / 1024 / 1024} MB`);
+          console.log(`compressedFile size ${compressedFile.size / 1024 / 1024} MB`);
+        } catch (error) {
+          console.log(error);
+          result.addClass('alert alert-danger').text('Image compression failed. Please try again.');
+          return;
+        }
+      }
+
+      result.text('Searching...');
 
       $.ajax({
         url: '/api/find-usage',
